knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Generic_Process_Event__e/Generic_Process_Event__e.object-meta.xml
<CustomObject>
    <description>This event is specifically for performing internal background tasks.</description>
    <label>Generic Process Event</label>
    <pluralLabel>Generic Process Events</pluralLabel>
</CustomObject>