knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Generic_Process_Event__e/fields/Context_Field2__c.field-meta.xml
<CustomField>
    <fullName>Context_Field2__c</fullName>
    <description>Context Field2 to store additional contextual information about the platform event</description>
    <label>Context Field2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>