knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Generic_Process_Event__e/fields/Event_Context__c.field-meta.xml
<CustomField>
    <fullName>Event_Context__c</fullName>
    <description>Event Context field to store contextual information about the platform event</description>
    <label>Event Context</label>
    <length>100</length>
    <type>Text</type>
</CustomField>